# bandit-exploration

./: .gitignore  .pre-commit-config.yaml  README.md  ai_alignment_algorithms.py  algorithms.py  analysis.ipynb  bandits.py  base_algorithms.py  bayesian_state.py  common.py  gaussian_algorithms.py  linear_algorithms.py  main.py  mypy.ini  poisson_algorithms.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_old.txt  setting.py
notebooks/: analysis.ipynb  test.ipynb
paper/: final.typ  progress.typ  refs.bib
src/bandit_sim/: __init__.py  ai_alignment_algorithms.py  bandits.py  base_algorithms.py  bayesian_state.py  cli.py  common.py  configs.py  epsilon_functions.py  setting.py
