[project]
name = "bandit-exploration"
version = "0.1.0"
description = "My personal reimplementation of various bandit algorithms."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "ray>=2.48.0",
    "tqdm>=4.67.1",
    "cyclopts>=3.0.0,<4.0.0",
    "loguru>=0.7.0,<0.8.0",
    "pyqt5<5.16",
    "pyqtwebengine<5.16",
    "loguru<1.0",
    "icecream>=2.0.0,<3.0.0"
]
